platform/manifests/backstage/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-lb
  namespace: backstage
spec:
  type: LoadBalancer
  selector:
    app: backstage
  ports:
    - port: 80
      targetPort: 7007
